force-app/main/default/objects/SM_WS_Suffix__mdt/SM_WS_Suffix__mdt.object-meta.xml
<CustomObject>
    <description>@Project: Smile &amp; MyPower
@Description: Suffix des appels Webservices</description>
    <label>SM_WS_Suffix</label>
    <pluralLabel>SM_WS_Suffixs</pluralLabel>
</CustomObject>