force-app/main/default/objects/SM_WS_Suffix__mdt/fields/activate_Apihour__c.field-meta.xml
<CustomField>
    <fullName>activate_Apihour__c</fullName>
    <defaultValue>false</defaultValue>
    <description>@Description faire appel à ce service via APIHOUR</description>
    <inlineHelpText>Remettre le service sur APIHOUR</inlineHelpText>
    <label>activate_Apihour</label>
    <type>Checkbox</type>
</CustomField>