force-app/main/default/objects/SM_WS_Suffix__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>@description: Description du lien et webservice ainsi que la version
@project: Smile/myPower</description>
    <inlineHelpText>Description du lien et webservice ainsi que la version</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>