force-app/main/default/objects/SM_WS_Suffix__mdt/fields/endpoint__c.field-meta.xml
<CustomField>
    <fullName>endpoint__c</fullName>
    <description>@Desciption: l&apos;endpoint sur lequel ce service sera appelé</description>
    <inlineHelpText>l&apos;endpoint sur lequel ce service sera appelé</inlineHelpText>
    <label>endpoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>