force-app/main/default/objects/SM_WS_Suffix__mdt/fields/suffix__c.field-meta.xml
<CustomField>
    <fullName>suffix__c</fullName>
    <description>@Projet: Smile &amp; MyPower
@Description: Le suffix qui correspond à l&apos;appel</description>
    <label>suffix</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>