force-app/main/default/objects/SM_WS_Suffix__mdt/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <description>@Description
@Project: Smile/MyPower</description>
    <label>type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WS</fullName>
                <default>true</default>
                <label>WS</label>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>