force-app/main/default/objects/SM_WS_Suffix__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Version - to use in Web service for field &quot;Context Version&quot;</description>
    <label>Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>