force-app/main/default/objects/SM_WS_Suffix__mdt/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>suffix__c</columns>
    <columns>Version__c</columns>
    <columns>Description__c</columns>
    <columns>type__c</columns>
    <columns>activate_Apihour__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
    <language>en_US</language>
</ListView>