force-app/main/default/objects/SM_WS_Suffix__mdt/listViews/All_WS.listView-meta.xml
<ListView>
    <fullName>All_WS</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>suffix__c</columns>
    <columns>Version__c</columns>
    <columns>Description__c</columns>
    <columns>type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>type__c</field>
        <operation>equals</operation>
        <value>WS</value>
    </filters>
    <label>All WS</label>
    <language>en_US</language>
</ListView>